--- a/css/app.css
+++ b/css/app.css
@@ -7,11 +7,12 @@ body{
 	font-family: 'Ubuntu Mono', monospace;
 	padding: 0px;
 	margin: 0px;
+
 }
 
 .nav{
-	background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 4%, rgba(0,212,255,1) 50%);
-	color: white;
+	background: rgb(255,31,99);
+background: linear-gradient(90deg, rgba(255,31,99,1) 0%, rgba(255,255,255,0.7847514005602241) 41%, rgba(0,212,255,1) 70%);	color: white;
 }
 
 .nav ul{
@@ -19,18 +20,30 @@ body{
 	list-style-type: none;
 	padding: 0px;
 	margin: 0px;
+	margin-bottom: 10px;
+
+	display: flex;
+  justify-content: center;
 }
 
 .nav ul li{	
 	padding: 16px;
 	text-align: center;
 	font-size:1.2rem;
-	border-bottom: 2px solid black;
-	transition: 1.2s;
+	margin: 10px 10px;
+	transition: 1s;
+	color: rgb(0,0,0,0.5);
+}
+
+.nav ul li > a{		
+	color: rgb(0,0,0,0.5);
 }
 
 .nav ul li:hover{	
 	background-color: rgb(0,0,0,0.5);	
+	transform: rotateX(30deg);
+	color: rgb(255,255,255,0.9);
+	cursor: pointer;
 }
 
 .image-area{
@@ -52,9 +65,6 @@ body{
 	 margin: 0px auto;
 }
 
-.single-service{		
-	box-shadow: 0 2px 5px rgba(1,2,1,0.5);
-}
 
 .intro-text{
 	background-color: rgba(255,2,1,0.5);
@@ -65,4 +75,34 @@ body{
 	font-size: 1.5rem;
 	text-align: center;;	
 	box-shadow: 0 2px 5px rgba(1,2,255,0.5);
+	margin-bottom: 20px;
+}
+
+.Services{
+	/*max-width: 100%;
+	margin: 10px 10px;
+	padding: 0px auto;
+	align-items: center;
+	justify-content: center;*/
+
+	font-family: 'Ubuntu Mono', monospace;
+	background-color: #9b59b6;
+	display: grid;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
+	margin:0;
+
+
+	background: linear-gradient(90deg, rgba(255,31,99,1) 0%, rgba(255,255,255,0.7847514005602241) 41%, rgba(0,212,255,1) 70%);	color: white;
+}
+
+.single-service{	
+	margin-bottom:  30px;	
+	padding: auto auto;	
+	box-shadow: 0 2px 5px rgba(1,2,1,0.5);
+}
+
+@media screen and (min-width: 700px){
+	
 }
